.archive/emqx/cluster/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
spec:
  parentRefs:
    - name: internal
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - "emqx.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: emqx-dashboard
          kind: Service
          port: 18083
